Add example java --add-modules at runtime